--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -13,11 +13,11 @@
     </div>
 
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('video')">Video</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('instrumental-config')">Instrumental Configuration</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('admin')">User Administration</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('config')">KATGUI Configuration</md-button>
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('about')">About KATGUI</md-button>
+        <md-button class="md-raised md-primary" ng-click="$root.stateGo('video')">Video</md-button>
+        <md-button class="md-raised md-primary" ng-click="$root.stateGo('instrumental-config')">Instrumental Configuration</md-button>
+        <md-button class="md-raised md-primary" ng-click="$root.stateGo('admin')">User Administration</md-button>
+        <md-button class="md-raised md-primary" ng-click="$root.stateGo('config')">KATGUI Configuration</md-button>
+        <md-button class="md-raised md-primary" ng-click="$root.stateGo('about')">About KATGUI</md-button>
     </div>
 
     <div class="navigation-tooltip" style="display: none; background-color: #ffffff"></div>
