--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -25,27 +25,28 @@
                  layout="row" layout-align="start" flex
                  style="min-width: 650px;">
 
-                <div class="" style="margin-left: 0;" layout="column" layout-align="start" flex>
+                <div class="" style="margin-left: 0; margin-top: 8px;" layout="column" layout-align="start" flex>
 
                     <md-toolbar
                         md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
-                        class="md-whiteframe-z1" ng-class="{'md-hue-2': subarray.state !== 'inactive'}">
-                        <span style="position: absolute; left: 8px; top: 8px;">SUBARRAY {{subarray.id}}</span>
-                        <md-button flex layout="row" style="min-height: 42px; max-height: 42px;" class="unselectable"
-                                   ng-click="vm.navigateToSchedulerDetails(subarray.id)"
-                                   title="Click to Manage Observations for Subarray {{subarray.id}}">
-                            <span>{{subarray.state}}</span>
-                            <span ng-if="subarray.maintenance">{{", in maintenance"}}</span>
-                        </md-button>
-                        <div layout="row" style="position: absolute; top: 0; right: 0; font-size: 14px; padding: 0">
+                        ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1"
+                        layout="row" layout-align="center center" title="{{subarray.description}}"
+                        style="max-height: 64px; min-height: 64px; position: relative; margin-top: -7px"
+                        ng-click="$root.stateGoWithSubId('scheduler.observations.detail', subarray.id)">
+                        <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
+                            <span><b>{{subarray.state}}</b></span>
+                            <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
+                        </span>
+                        <span flex></span>
+                        <div layout="row" layout-align="center center" style="position: absolute; padding: 0; top: 7px; left: 0; right: 0; font-size: 12px">
                             <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
-                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band}}</b></span>
-                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product}}</b></span>
+                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band ? subarray.band : 'None'}}</b></span>
+                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product ? subarray.product : 'None'}}</b></span>
                             <span ng-show="subarray.state === 'active' || subarray.config_label"
-                                  title="Config Label"><i>Config Label: </i><b>{{subarray.config_label}}</b></span>
+                                  title="Config Label"><i>Config Label: </i><b>{{subarray.config_label ? subarray.config_label : 'None'}}</b></span>
                         </div>
                         <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
-                             style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
+                             style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0; height: 12px">
                             <span style="width: 125px" class="subheader-text">
                                 <span>ID</span>
                             </span>
@@ -70,17 +71,17 @@
                         </div>
 
                     </md-toolbar>
-                    <div flex class="schedule-draft-data-list" ng-class="{'maintenance-bg':subarray.maintenance}">
+                    <div md-theme="{{themePrimaryButtons}}" flex class="schedule-draft-data-list" ng-class="{'maintenance-bg':subarray.maintenance}">
                         <div style="padding: 0 4px"
                              ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id} track by item.id"
-                             class="schedule-draft-item animate-repeat" layout="column">
+                             class="schedule-draft-item" layout="column">
                             <div flex layout="row" layout-align="start center">
-                                <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary"
+                                <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary progress-bar-fill"
                                                     md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}"
                                                     value="{{item.progress}}"
-                                                    style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                                                    style="position: absolute; left: 0; right: 0;">
                                 </md-progress-linear>
-                                <div layout="column" layout-align="start" style="padding-top: 4px; width: 120px">
+                                <div layout="column" layout-align="start" style="width: 120px">
                                 <span
                                     ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                     style="font-size: 14px; font-weight: bold"
