--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -1,4 +1,4 @@
-<div flex layout="column" style="min-width: 1280px; min-height: 500px; margin-top: 4px;"
+<div flex layout="column" style="min-width: 1320px; min-height: 500px; margin-top: 4px;"
      ng-controller="SubArraysCtrl as vm">
 
     <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}"
@@ -10,19 +10,19 @@
         <span flex></span>
         <md-button class="md-primary md-raised" style="margin: 0"
                    ng-click="$root.stateGoWithSubId('scheduler.resources', vm.subarray_id)">
-            <span>Manage Subarray</span>
+            <span>Set-up Subarray</span>
         </md-button>
         <div ng-include="'images/left-arrow.svg'" class="left-arrow-transform-small"></div>
         <div style="border: 8px solid #4CAF50; border-radius: 4px;">
             <md-button class="md-primary md-raised" style="margin: -1px"
-                       ng-click="$root.stateGoWithSubId('scheduler.subarrays', vm.subarray_id)">
+                       ng-click="$root.stateGo('scheduler')">
                 <span>Manage Schedule Blocks</span>
             </md-button>
         </div>
         <div ng-include="'images/left-arrow.svg'" class="left-arrow-transform-small"></div>
         <md-button class="md-primary md-raised" style="margin: 0"
                    ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray_id)">
-            <span>Manage Observations</span>
+            <span>Observations</span>
         </md-button>
         <span flex></span>
         <md-button style="margin: 0" title="All Subarrays Observations Overview"
@@ -33,33 +33,33 @@
 
     <div flex layout="row" layout-align="start" style="margin-top: 16px">
 
-        <div flex layout="column" style="overflow: auto; padding-left: 8px; margin-right: 392px;">
+        <div flex layout="column" style="overflow: auto; padding-left: 8px; margin-right: 8px">
             <div flex ng-repeat="subarray in vm.subarrays | filter: (vm.subarray_id || '') && {id: vm.subarray_id} | orderBy:'id'"
-                class="md-whiteframe-z2 subarray-container animate-repeat" layout="row" layout-align="start"
+                class="md-whiteframe-z2 subarray-container" layout="row" layout-align="start"
                 md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}">
 
                 <div layout="column" flex>
                     <md-toolbar
                         md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
-                        class="md-whiteframe-z1" style="max-height: 64px;min-height: 64px; position: relative"
-                        ng-class="{'md-hue-2': subarray.state !== 'inactive'}">
-                        <span style="position: absolute; left: 8px; top: 8px;">SUBARRAY {{subarray.id}}</span>
-                        <md-button flex layout="row" style="min-height: 42px; max-height: 42px;" class="unselectable"
-                                   ng-click="vm.navigateToSchedulerDetails(subarray.id)"
-                                   title="Click to Manage Observations for Subarray {{subarray.id}}">
-                            <span>{{subarray.state}}</span>
-                            <span ng-if="subarray.maintenance">{{", in maintenance"}}</span>
-                        </md-button>
-                        <div layout="row" style="position: absolute; top: 0; right: 0; font-size: 14px; padding: 0">
+                        ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1"
+                        layout="row" layout-align="center center" title="{{subarray.description}}"
+                        style="max-height: 64px; min-height: 64px; position: relative; margin-top: -7px"
+                        ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray_id)">
+                        <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
+                            <span><b>{{subarray.state}}</b></span>
+                            <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
+                        </span>
+                        <span flex></span>
+                        <div layout="row" layout-align="center center" style="position: absolute; padding: 0; top: 7px; left: 0; right: 0; font-size: 12px">
                             <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
-                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band}}</b></span>
-                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product}}</b></span>
+                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band ? subarray.band : 'None'}}</b></span>
+                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product ? subarray.product : 'None'}}</b></span>
                             <span ng-show="subarray.state === 'active' || subarray.config_label"
-                                  title="Config Label"><i>Config Label: </i><b>{{subarray.config_label}}</b></span>
+                                  title="Config Label"><i>Config Label: </i><b>{{subarray.config_label ? subarray.config_label : 'None'}}</b></span>
                         </div>
 
                         <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
-                             style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
+                             style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0; height: 12px">
                         <span style="width: 120px" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
                             <span>ID</span>
                             <span class="fa"
@@ -109,12 +109,12 @@
                             style="padding: 0 4px" flex layout="row" layout-align="start center"
                             ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                             ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
-                            class="schedule-draft-item animate-repeat" layout="column">
-                            <md-progress-linear ng-if="item.verification_state === 'VERIFYING'" class="md-primary"
+                            class="schedule-draft-item" layout="column">
+                            <md-progress-linear ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
                                                 md-mode="indeterminate"
-                                                style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                                                style="position: absolute; left: 0; right: 0;">
                             </md-progress-linear>
-                            <div layout="column" layout-align="start" style="padding-top: 4px; width: 125px">
+                            <div layout="column" layout-align="start" style="width: 125px">
                             <span
                                 ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                 style="font-size: 14px; font-weight: bold"
@@ -168,15 +168,15 @@
             </div>
         </div>
 
-        <div flex layout="row"
-             style="position: absolute; max-width: 385px; min-width: 385px; padding-right: 8px; padding-bottom: 8px; right: 0;"
+        <div layout="row"
+             style="max-width: 385px; min-width: 385px; padding-right: 8px; padding-bottom: 8px;"
              class="md-whitespace-z1">
             <div class="md-whiteframe-z2" layout="column" flex>
                 <md-toolbar class="panel-toolbar-small md-whiteframe-z1" ng-mouseenter="showDraftTools = true;"
                             ng-mouseleave="showDraftTools = false;">
                     <div layout="row" class="unselectable md-toolbar-tools">
                         <span flex>Drafts</span>
-                        <input class="fade-in search-input-box" ng-show="showDraftTools || vm.q" type="search"
+                        <input class="fade-in search-input-box" type="search"
                                ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Drafts..."/>
                     </div>
                 </md-toolbar>
@@ -187,7 +187,7 @@
                         style="cursor: pointer !important;"
                         ng-class="{'selected-resource-item': item.selected}"
                         ng-click="item.selected = !item.selected;"
-                        class="schedule-draft-item animate-repeat" layout="column" layout-align="center start"
+                        class="schedule-draft-item" layout="column" layout-align="center start"
                         post-ng-repeat-load-more>
                         <div layout="row" layout-align="start center" style="padding: 0 2px">
                             <md-button class="inline-action-button"
